# edivando_calcados

./: db.sqlite3  manage.py  pyproject.toml
edivando_calcados/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  pagination.py
main/migrations/: 0001_initial.py  0002_remove_galery_img_galery_img.py  0003_alter_product_brand_alter_product_galery_and_more.py  0004_product_status.py
main/models/: brand.py  category.py  galery.py  group.py  image.py  product.py
main/serializers/: brand_serializer.py  category_serializer.py  galery_serializer.py  group_serializer.py  image_serializer.py  product_serializer.py  user_serializer.py
main/views/: brand_vw.py  category_vw.py  galery_vw.py  group_vw.py  image_vw.py  product_vw.py  user_vw.py
